--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <p  class="text-muted"> Head of Talent </br>Homebrew</p>
               </li>
               <li>
-                 <img src="img/speakers/dey.jpg" id="modal-2" href="#modal-container-2" role="button" data-toggle="modal">
+                 <img src="img/speakers/farouk.jpg" id="modal-2" href="#modal-container-2" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/faroukdey" target="_blank">Farouk Dey</a>
                 <p class="text-muted">Dean of Career Education</br> Stanford University</p>
               </li>
@@ -153,11 +153,21 @@
                 <a class="name" href="https://www.linkedin.com/in/teyscott/" target="_blank">Tey Scott</a>
                 <p  class="text-muted">Sr. Dir. Talent Acquisition </br> Linkedin</p>
               </li>
+                
+
+            <li>
+                <img src="img/speakers/sarah.jpg" id="modal-6" href="#modal-container-sarah" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/sarah-coke-1a5a1037/" target="_blank">Sarah Coke </a>
+                <p  class="text-muted">Lead Global Internship Programs </br>  SAP/Concur</p>
+              </li>
+
+
               <li>
                 <img src="img/speakers/jeff.jpg" id="modal-6" href="#modal-container-6" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/jeffreydandria" target="_blank">Jeff D'Andria </a>
                 <p  class="text-muted">Career Ventures </br>  Stanford University</p>
               </li>
+
               <li>
                 <img src="img/speakers/P1310272.JPG" id="modal-7" href="#modal-container-7" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/aliciarharris/">Alicia Harris</a>
@@ -385,6 +395,24 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 </div>
 </div>
 
+<!-- Bio -->  
+
+<div class="modal fade" id="modal-container-sarah" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Sarah is passionate about early talent. Over the last 5 years Sarah has gone from Intern to Onboarding Coordinator to Global Internship Lead for Concur and now SAP. She’s spent her career focusing on experience and building sustainable and scalable global internship and early talent programs. Consistently recognized as a strategic business partner for driving early talent strategy, programs and global expansions while ensuring a stellar experience for all. Sarah recently joined the board for STAC, Seattle Talent Acquisition Collaborative as the Director of Marketing and Social Media. When not in an airport or traveling the world, Sarah can be found outdoors hiking, cycling or chasing the snow for the perfect day on the mountain. 
+
+</div>
+</div>
+</div>
+</div>
+
 
 
 <!-- End Bios -->
@@ -534,7 +562,7 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
           </li>
             
           <li>
-            <span class="time_block">11:00 am - 2:00 pm</span>
+            <span class="time_block">11:00 am - 3:00 pm</span>
             <h5 class="block_title">San Francisco Tech Trek</h5>
             <p class="block_description">Learn about various tech employers in San Francisco</p>
           </li>
