--- a/index.html
+++ b/index.html
@@ -184,6 +184,33 @@
                 <a class="name" href="https://www.linkedin.com/in/stevon-cook-93778465" target="_blank">Stevon Cook</a>
                 <p  class="text-muted">Commissioner </br> San Francisco Board of Education</p>
               </li>
+
+               <li>
+                <img src="img/speakers/danielle.jpg" id="modal-danielle" href="#modal-container-danielle" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/daniellehauckepstein/" target="_blank">Danielle Epstein</a>
+                <p  class="text-muted">Employer Partnerships </br> Cal Poly </p>
+              </li>
+
+              <li>
+                <img src="img/speakers/dale.jpg" id="modal-dale" href="#modal-container-dale" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/dalestoker" target="_blank">Dale Stoker</a>
+                <p  class="text-muted">Employer Relations Specialist  </br> Cal Poly</p>
+              </li> 
+
+              <li>
+                <img src="img/speakers/ahmad.jpg" id="modal-ahmad" href="#modal-container-ahmad" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/dalestoker" target="_blank">Ahmad Wright</a>
+                <p  class="text-muted">Assitant Dean of Career Education  </br> Stanford University</p>
+              </li>
+
+              <li>
+                <img src="img/speakers/heidi.png" id="modal-heidi" href="#modal-container-heidi" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/heidinewiger" target="_blank">Heidi Newiger</a>
+                <p  class="text-muted">‎Global University & Diversity Recruitment Programs Manager  </br> AppDynamics</p>
+              </li>
+
+
+
             </ul>
         </div>
     </div>
@@ -227,7 +254,7 @@
             </div>
 
             <div class="col-sm-3 col-2-mobile">
-            <img src="img/attendees/medallia.png"></a>
+            <img src="img/attendees/gt.png"></a>
             </div>
             
             <div class="col-sm-3 col-2-mobile">
@@ -293,6 +320,44 @@ Dr. Farouk Dey is Associate Vice Provost of Student Affairs and Dean of Career E
 <div class="modal-body">
 
 Beth is the Head of Talent at Homebrew a seed stage venture firm with a focus on the "Bottom Up Economy". Prior to Homebrew, Beth spent 5+ years at Salesforce leading executive search, sales leadership, and sales growth/professional services recruiting teams. She joined Google in 2003 to build out the AdSense team and then spent 6 years hiring for business operations, corporate communications, corporate development, and various engineering teams, including new graduate PhDs. She is a a proud graduate of The Colorado College with a BS in Psychology.
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->
+
+<div class="modal fade" id="modal-container-ahmad" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">  
+
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Ahmad develops career connections through networking events, mentoring programs, and career meetups that serve as catalysts for students and alumni of diverse backgrounds and underrepresented groups to discover career paths, connect with mentors and opportunities, and engage in the career development process early and often. Ahmad’s professional experience includes a combined 9 years of work in higher education and the recruiting industry. Ahmad received his M.A. in Education and B.A. in Sociology, both from the University of California, Berkeley.
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->
+
+<div class="modal fade" id="modal-container-heidi" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">  
+
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Heidi graduated from UCSB and found her first job out of school in tech (and recruiting) by chance. She joined AppDynamics a year and a half later to start the University Recruitment Program, and got involved soon after on founding a Women in Technology initiative at the organization. Four years into this journey, Heidi has helped hire over 100 interns and fresh grads, and scale the program globally. The most difficult and stretching part of her role included IIT recruitment in India, which is a beast of a different nature entirely. In addition to Talent Programs, Heidi is very interested in D&I and is on the leadership team of the non-profit "Diversity Advocates". Her interest in Diversity & Inclusion dates back to her childhood, and finding that there was need and value of this work at a corporate level (founding AppDynamics' Women in Tech and Pride in Tech ERGs) was exciting and energizing for her.
 
 </div>
 </div>
@@ -397,6 +462,24 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 
 <!-- Bio -->  
 
+<div class="modal fade" id="modal-container-dale" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Dale is currently an Employer Relations Specialist with Cal Poly - San Luis Obispo where he works with employers, students, faculty and staff to create targeted recruiting opportunities. Prior to joining Cal Poly, Dale worked at Stanford Law School in development and at St. John Fisher College in annual giving. He holds an undergraduate degree in Business Management and MBA and brings a strategic business approach to his work in higher education.
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->  
+
 <div class="modal fade" id="modal-container-sarah" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
 <div class="modal-dialog">
 <div class="modal-content">
@@ -407,6 +490,24 @@ Stevon Cook is a third generation San Franciscan and graduate of San Francisco p
 <div class="modal-body">
 
 Sarah is passionate about early talent. Over the last 5 years Sarah has gone from Intern to Onboarding Coordinator to Global Internship Lead for Concur and now SAP. She’s spent her career focusing on experience and building sustainable and scalable global internship and early talent programs. Consistently recognized as a strategic business partner for driving early talent strategy, programs and global expansions while ensuring a stellar experience for all. Sarah recently joined the board for STAC, Seattle Talent Acquisition Collaborative as the Director of Marketing and Social Media. When not in an airport or traveling the world, Sarah can be found outdoors hiking, cycling or chasing the snow for the perfect day on the mountain. 
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->  
+
+<div class="modal fade" id="modal-container-danielle" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Danielle Epstein is a part of the  Employer Partnerships team at Cal Poly Career Services. She holds a B.A. in Journalism and a M.S. in Mass Communications from San Diego State University, as well as a M.A. in Student Affairs from Cal Poly. Her background includes extensive industry experience in the technology, media, entertainment, and non-profit sectors, including roles in sales management, business development, communications, and consulting. Active in the community, she has held board positions at two local non-profits, and helped to develop and facilitate the Mustang Mentoring program at Cal Poly, which brought alumni back to campus to network and advise current students.
 
 </div>
 </div>
@@ -508,7 +609,7 @@ Sarah is passionate about early talent. Over the last 5 years Sarah has gone fro
          <li>
              <span class="time_block">3:15 pm - 4:00 pm</span>
             <h5 class="block_title">From Treks to Tech Talks, An immersive approach to university employer partnerships </h5>
-             <p class="block_description"></p>
+             <p class="block_description">Danielle Epstein & Dale Stoker (Cal Poly SLO)</p>
           </li>
 
           <li>
