--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </li> 
               <li>
                 <img src="img/speakers/kristen.png" id="modal-kristen" href="#modal-container-kristen" role="button" data-toggle="modal">
-                <a class="name" href="https://www.linkedin.com/in/kdauler" target="_blank">Kisten Dauler</a>
+                <a class="name" href="https://www.linkedin.com/in/kdauler" target="_blank">Kristen Dauler</a>
                 <p  class="text-muted">Technical University Recruiter  </br> Lyft</p>
               </li>  
              
@@ -230,7 +230,7 @@
 
                <li>
                 <img src="img/speakers/glen.png" id="modal-glen" href="#modal-container-glen" role="button" data-toggle="modal">
-                <a class="name" href="https://www.linkedin.com/in/adamreis" target="_blank">Glen Robertson</a>
+                <a class="name" href="https://www.linkedin.com/in/glenrobertson" target="_blank">Glen Robertson</a>
                 <p  class="text-muted">Software Engineer </br> Lyft</p>
               </li> 
 
