--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
               </li>
 
               <li>
+                <img src="img/speakers/liz.jpg" id="modal-liz" href="#modal-container-liz" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/elizabethwessel" target="_blank">Liz Wessel</a>
+                <p  class="text-muted">Co-Founder & CEO</br> WayUp</p>
+              </li>
+
+              <li>
                 <img src="img/speakers/tey.jpg" id="modal-5" href="#modal-container-5" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/teyscott/" target="_blank">Tey Scott</a>
                 <p  class="text-muted">Sr. Dir. Talent Acquisition </br> Linkedin</p>
@@ -576,6 +582,24 @@ Glen was born in New Zealand and has been at Lyft for the past four years. Aside
 
 <!-- Bio -->  
 
+<div class="modal fade" id="modal-container-liz" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+Liz Wessel is the Co-Founder and CEO of WayUp, the leading job marketplace exclusively for U.S. college students and recent grads. Founded in July 2014, WayUp is a venture-backed startup based in NYC that has raised nearly $30M, and was named by CNN as one of the 30 most innovative companies changing the world. WayUp's 3.5 million users represent over 6,300 campuses in the U.S., and WayUp has worked with companies of all sizes -- from startups to Fortune 500's like Google, Starbucks and Disney. Liz has been featured as one of Forbes’ 30 Under 30 and has been named one of the 18 Coolest Women in Silicon Valley. Prior to founding WayUp, Liz worked at Google as a Product Marketing Manager in California and then in India.
+
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->  
+
 <div class="modal fade" id="modal-container-adam" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
 <div class="modal-dialog">
 <div class="modal-content">
@@ -723,7 +747,7 @@ Adam is a software engineer at Lyft, where he works to accelerate our transition
           <li>
             <span class="time_block">5:30 pm - 7:30 pm</span>
             <h5 class="block_title">Networking Reception & Happy Hour</h5>
-             <p class="block_description"></p>
+             <p class="block_description"> Sponsored by <a href="https://wayup.com" target="_blank">WayUp</a> </p>
           </li>
 
          
