--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@ Adam is a software engineer at Lyft, where he works to accelerate our transition
       <div class="faq col-1-2 col-1-mobile">
         <div class="wrap">
           <h4>How Can I Become a Sponsor or Host a Trek?</h4>
-          <p>We are excited to consider opportunities that will enhance the conference experience. For sponosorship, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform" target="_blank">sponsor interest form</a>. If you are interested in hosting a trek on site at your company please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQaZ47f9wvestoc8bir3x5xavPxRC28XTBaXg6VWNeUYT9fQ/viewform" target="_blank"> trek interest form</a>. </p>
+          <p>We are excited to consider opportunities that will enhance the conference experience. For sponsorship, please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSea31zXtnE6pmZ6Buv9nFhTZy7MvaE8ljNmCTdtv_B2gpbgsQ/viewform" target="_blank">sponsor interest form</a>. If you are interested in hosting a trek on site at your company please fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfQaZ47f9wvestoc8bir3x5xavPxRC28XTBaXg6VWNeUYT9fQ/viewform" target="_blank"> trek interest form</a>. </p>
         </div>
       </div>
 
