--- a/index.html
+++ b/index.html
@@ -795,8 +795,8 @@ Adam is a software engineer at Lyft, where he works to accelerate our transition
 
           <li>
             <span class="time_block">1:00 pm - 3:00 pm</span>
-            <h5 class="block_title">San Francisco Tech Trek</h5>
-            <p class="block_description">Learn about various tech employers in San Francisco</p>
+            <h5 class="block_title">Company/University Presentations</h5>
+            <p class="block_description">Learn about various tech employers and university engineering programs</p>
           </li>
          
         </ul>
