--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="UR(x) is the university recruiting conference. Join university job developers, campus recruiters, and student leaders." content="">
     <meta name="UR(x) - The University Recruiting Conference - San Francisco Bay Area - December 5-6" content="">
 
-    <title> UR<sup style= "color:#f05f40">x</sup> - The University Recruiting Conference </title>
+    <title> URx - The University Recruiting Conference </title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
