--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ Adam is a software engineer at Lyft, where he works to accelerate our transition
           <li>
             <span class="time_block">1:30 pm - 2:50 pm</span>
             <h5 class="block_title">Company/University Presentations</h5>
-            <p class="block_description">Lineup include Facebook, SAP/Concur, & Northwestern</p>
+            <p class="block_description">Lineup includes Facebook, SAP/Concur, USC & Northwestern</p>
           </li>
            
             <li>
