--- a/index.html
+++ b/index.html
@@ -177,12 +177,18 @@
             <li>
                 <img src="img/speakers/sarah.jpg" id="modal-6" href="#modal-container-sarah" role="button" data-toggle="modal">
                 <a class="name" href="https://www.linkedin.com/in/sarah-coke-1a5a1037/" target="_blank">Sarah Coke </a>
-                <p  class="text-muted">Lead Global Internship Programs </br>  SAP/Concur</p>
+                <p  class="text-muted">Lead Global Internship Programs </br> SAP/Concur</p>
+              </li>
+            
+            <li>
+                <img src="img/speakers/elizabeth.jpg" id="modal-elizabeth" href="#modal-container-elizabeth" role="button" data-toggle="modal">
+                <a class="name" href="https://www.linkedin.com/in/elizabethames" target="_blank">Elizabeth Ames</a>
+                <p  class="text-muted">SVP, Programs, Marketing and Alliances </br> Anita Borg Institute</p>
               </li>
 
               <li>
                 <img src="img/speakers/ahmad.jpg" id="modal-ahmad" href="#modal-container-ahmad" role="button" data-toggle="modal">
-                <a class="name" href="https://www.linkedin.com/in/dalestoker" target="_blank">Ahmad Wright</a>
+                <a class="name" href="https://www.linkedin.com/in/ahmadwright" target="_blank">Ahmad Wright</a>
                 <p  class="text-muted">Assitant Dean of Career Education  </br> Stanford University</p>
               </li>
               
@@ -438,6 +444,30 @@ Stephanie has been working on the recruiting team at FiveStars for the past two 
 
 Heidi graduated from UCSB and found her first job out of school in tech (and recruiting) by chance. She joined AppDynamics a year and a half later to start the University Recruitment Program, and got involved soon after on founding a Women in Technology initiative at the organization. Four years into this journey, Heidi has helped hire over 100 interns and fresh grads, and scale the program globally. The most difficult and stretching part of her role included IIT recruitment in India, which is a beast of a different nature entirely. In addition to Talent Programs, Heidi is very interested in D&I and is on the leadership team of the non-profit "Diversity Advocates". Her interest in Diversity & Inclusion dates back to her childhood, and finding that there was need and value of this work at a corporate level (founding AppDynamics' Women in Tech and Pride in Tech ERGs) was exciting and energizing for her.
 
+</div>
+</div>
+</div>
+</div>
+
+<!-- Bio -->
+
+<div class="modal fade" id="modal-container-elizabeth" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"tabindex='-1'>
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">  
+
+<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+
+</div>
+<div class="modal-body">
+
+As a senior executive at the Anita Borg Institute (ABI), Elizabeth is an advocate for advancing women in
+technical roles in industry and academia. She is responsible ABI’s global communities of women
+technologists and programs for organizations focused on improving their diversity and inclusion. In
+addition, she leads the strategy, alliances and marketing teams. Prior to ABI, she held management
+positions in marketing and strategy at Apple, Verifone, Netcentives, Vontu, Certive, Plastic Logic, and
+RETHINK Partners, where she was Founder and CEO. Elizabeth received her BFA from the Hartford Art
+School and her MBA from the Cox School of Business at Southern Methodist University.
 </div>
 </div>
 </div>
