--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img width="259" height="52" src="assets/images/logos/conference_logo.png" alt="Luke eseda" />
             <p class="mb-5">The URx Community is coming North for the first time this <strong>November</strong>!</p>  
 
-            <p>Join us, <a href="https://join.urxconference.com/toronto-speak">submit a speaker proposal </a>  or <a href="https://join.urxconference.com/toronto-volunteer">Volunteer</a>! Questions?  - team@urxconference.com
+            <p>Join us, <a href="https://join.urxconference.com/toronto-speak">submit a speaker proposal </a>  or <a href="https://join.urxconference.com/toronto-volunteer">Volunteer</a>! Questions?  - hi@urxcommunity.com
                </p>
 
 
